--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Print your ToDo list in the terminal in order to manage them better according to Agile",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Piero Blunda",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "gitignore-to-glob": "^0.3.0",
     "glob-gitignore": "^1.0.14",
     "ignore": "^5.1.4"
+  },
+  "devDependencies": {
+    "mocha": "^7.1.0"
   }
 }
