Add test por language-PHP

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "technical-debt-cli",
   "version": "1.0.0",
   "description": "Print your ToDo list in the terminal in order to manage them better according to Agile",
-  "main": "index.js",
+  "main": "runner.js",
   "scripts": {
     "test": "mocha"
   },
