--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "technical-debt-cli",
   "version": "1.0.0",
   "description": "Print your ToDo list in the terminal in order to manage them better according to Agile",
-  "main": "runner.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "mocha --experimental-modules --color",
     "debt": "node --no-warnings --experimental-modules --es-module-specifier-resolution=node index.js init"
   },
   "author": "Piero Blunda",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
     "gitignore-to-glob": "^0.3.0",
