--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Piero Blunda",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "gitignore-to-glob": "^0.3.0",
     "glob-gitignore": "^1.0.14",
     "ignore": "^5.1.4"
